Fix a visual issue on home page of sections ("Taking customiation..."), the content div was to big and a vertical scrollbar appeared.

--- a/scss/_section.scss
+++ b/scss/_section.scss
@@ -132,7 +132,7 @@
 
   .teasing-box {
       width: 640px;
-      margin: auto;
+      margin: 0 auto -100% auto;
       padding: 10px;
       background: rgba(0,0,0,.7);
       position: relative;
